# k_means

./: .gitignore  CMakeLists.txt  README.md  k-means.cpp
Include/: EuclidMetric.hpp  IClusterer.hpp  IData.hpp  IMetric.hpp  Iris.hpp  k-means.hpp
Source/: EuclidMetric.cpp  Iris.cpp  Main.cpp  k-means.cpp
TestData/: test_data.csv
